idf_component_register(
    SRC_DIRS 
        "common/"
        "CycloneTCP/drivers/wifi"
        "CycloneTCP/core"
        "CycloneTCP/dhcp"
        "CycloneTCP/dns"
        "CycloneTCP/ipv4"
        "CycloneTCP/igmp"
        "CycloneTCP/ipv6"
        "CycloneTCP/netbios"
        "CycloneTCP/llmnr"
        "CycloneTCP/http"
        "CycloneTCP/ftp"
    EXCLUDE_SRCS
        "common/fs_port_fatfs.c"
        "common/fs_port_posix.c"
        "common/fs_port_rl_fs.c"
        "common/os_port_chibios.c"
        "common/os_port_cmsis_rtos.c"
        "common/os_port_cmsis_rtos2.c"
        "common/os_port_cmx_rtx.c"
        "common/os_port_embos.c"
        "common/os_port_none.c"
        "common/os_port_posix.c"
        "common/os_port_px5.c"
        "common/os_port_rtx.c"
        "common/os_port_safertos.c"
        "common/os_port_sys_bios.c"
        "common/os_port_threadx.c"
        "common/os_port_ucos2.c"
        "common/os_port_ucos3.c"
        "common/os_port_windows.c"
        "common/os_port_zephyr.c"
        "common/resource_manager.c"
        "CycloneTCP/drivers/wifi/bcm43362_driver.c"
        "CycloneTCP/drivers/wifi/cc33xx_driver.c"
        "CycloneTCP/drivers/wifi/esp8266_driver.c"
        "CycloneTCP/drivers/wifi/mrf24wg_driver.c"
        "CycloneTCP/drivers/wifi/wf200_driver.c"
        "CycloneTCP/drivers/wifi/wilc1000_driver.c"
        "CycloneTCP/drivers/wifi/winc1500_driver.c"
        "CycloneTCP/drivers/wifi/winc3400_driver.c"
    INCLUDE_DIRS
        "."
        "common"
        "CycloneTCP/"
    REQUIRES joltwallet__littlefs esp_wifi
)