idf_component_register(
    SRC_DIRS 
        "common/"
        "CycloneTCP/drivers/wifi"

        # "CycloneTCP/drivers/eth"

        "CycloneTCP/core"
        "CycloneTCP/dhcp"
        "CycloneTCP/dns"
        "CycloneTCP/ipv4"
        "CycloneTCP/igmp"
        "CycloneTCP/ipv6"
        "CycloneTCP/netbios"
        "CycloneTCP/llmnr"
        "CycloneTCP/http"
        "CycloneTCP/ftp"
    EXCLUDE_SRCS
        "common/fs_port_fatfs.c"
        "common/fs_port_posix.c"
        "common/fs_port_rl_fs.c"
        "common/os_port_chibios.c"
        "common/os_port_cmsis_rtos.c"
        "common/os_port_cmsis_rtos2.c"
        "common/os_port_cmx_rtx.c"
        "common/os_port_embos.c"
        "common/os_port_none.c"
        "common/os_port_posix.c"
        "common/os_port_px5.c"
        "common/os_port_rtx.c"
        "common/os_port_safertos.c"
        "common/os_port_sys_bios.c"
        "common/os_port_threadx.c"
        "common/os_port_ucos2.c"
        "common/os_port_ucos3.c"
        "common/os_port_windows.c"
        "common/os_port_zephyr.c"
        "common/resource_manager.c"
        "CycloneTCP/drivers/wifi/bcm43362_driver.c"
        "CycloneTCP/drivers/wifi/cc33xx_driver.c"
        "CycloneTCP/drivers/wifi/esp8266_driver.c"
        "CycloneTCP/drivers/wifi/mrf24wg_driver.c"
        "CycloneTCP/drivers/wifi/wf200_driver.c"
        "CycloneTCP/drivers/wifi/wilc1000_driver.c"
        "CycloneTCP/drivers/wifi/winc1500_driver.c"
        "CycloneTCP/drivers/wifi/winc3400_driver.c"
        "CycloneTCP/drivers/eth/adin1110_driver.c"
        "CycloneTCP/drivers/eth/dm9000_driver.c"
        "CycloneTCP/drivers/eth/enc424j600_driver.c"
        "CycloneTCP/drivers/eth/enc624j600_driver.c"
        "CycloneTCP/drivers/eth/ksz8851_driver.c"
        "CycloneTCP/drivers/eth/lan8650_driver.c"
        "CycloneTCP/drivers/eth/lan8651_driver.c"
        "CycloneTCP/drivers/eth/lan9250_driver.c"
        "CycloneTCP/drivers/eth/ncn25010_driver.c"
        "CycloneTCP/drivers/eth/w5100s_driver.c"
        "CycloneTCP/drivers/eth/w5200_driver.c"
        "CycloneTCP/drivers/eth/w5500_driver.c"
        "CycloneTCP/drivers/eth/w6100_driver.c"
    INCLUDE_DIRS
        "."
        "common"
        "CycloneTCP/"
    REQUIRES joltwallet__littlefs esp_wifi
)
